<resources>
    <string name="app_name">出库管家</string>
    <string name="title_activity_operation">Operation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="scan_title">扫描相机测试</string>

    <string name="scan_camera_error">扫描头检测错误，请检查！！！</string>
    <string name="scan_distance_error">设备位置错误，请检查！！！</string>
    <string name="scan_ready">READY\n扫描过程中请勿插拔扫描头！！！</string>
    <string name="scan_pass">PASS</string>
    <string name="scan_fail">FAIL</string>
    <string name="scan_start_init">安装扫描头到位后，点击此按钮开始测试。</string>
    <string name="scan_start_far">请将设备移至远距，点击此按钮开始远距测试。</string>
    <string name="scan_start_middle">请将设备移至中距，点击此按钮开始中距测试。</string>
    <string name="scan_start_near">请将设备移至近距，点击此按钮开始近距测试。</string>
    <string name="scan_stop_success">扫描测试PASS，点击此按钮以确认瞄准灯偏离度是否正常。</string>
    <string name="scan_stop_fail">测试失败，将设备移至近距，点击此按钮重新开始测试\n或更换新的待测设备。</string>
    <string name="scan_aim_fail">瞄准灯测试失败，将设备移至近距，点击此按钮重新开始测试\n或更换新的待测设备。</string>
    <string name="scan_ill_fail">补光灯测试失败，将设备移至近距，点击此按钮重新开始测试\n或更换新的待测设备。</string>
    <string name="scan_running">测试中，请勿移动设备</string>
    <string name="scan_Aim_check">请点击此按钮以确认瞄准灯是否正常</string>
    <string name="scan_Ill_check">请点击此按钮以确认补光灯是否正常</string>
    <string name="scan_Aim_Deviation_check">请点击此按钮以确认瞄准灯偏离度是否正常</string>
    <string name="scan_Aim_Deviation_fail">瞄准灯偏离度异常，将设备移至近距，点击此按钮重新开始测试\n或更换新的待测设备。</string>
    <string name="scan_Aim_Deviation_success">瞄准灯偏离度正常，请更换新的待测设备，点击此按钮重新开始测试。</string>

    <string name="activatingLicense">license激活中...</string>
    <string name="activateLicenseSuccess">license激活成功</string>
    <string name="activateLicenseFail">license激活失败</string>

    <string name="str_search_camera">搜索相机</string>
    <string name="str_open_camera">打开相机</string>
    <string name="str_close_camera">关闭相机</string>
    <string name="str_start_scan">开始读码</string>
    <string name="str_stop_scan">停止读码</string>
    <string name="str_save_pic">保存图片</string>
    <string name="str_set_param">设置</string>
    <string name="str_get_param">获取</string>
    <string name="str_open_camera_success">绑定相机成功</string>
    <string name="str_close_camera_success">关闭相机成功</string>
    <string name="str_start_scan_result">解析到码：</string>
    <string name="str_stop_scan_success">停止读码成功</string>
    <string name="str_set_param_success">设置参数成功</string>
    <string name="str_get_param_success">获取参数成功</string>
    <string name="str_hint_param_check">请检查设置的参数！</string>
    <string name="str_pic_save_success">图片保存成功，图片保存为</string>
    <string name="str_code_value">码信息</string>
    <string name="str_code_type">码模式</string>
    <string name="str_hint_open_camera">请先打开相机！</string>
    <string name="str_hint_camera_opend">相机已经打开！</string>
    <string name="str_hint_camera_error">相机无法打开！</string>
    <string name="str_search_camera_result">搜索到相机设备：</string>
    <string name="str_camera_unit">个</string>
    <string name="str_search_camera_ok">相机搜索成功</string>
    <string name="input_license">输入注册码</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="str_scan_total_count">扫描总数:</string>
    <string name="str_scan_code">条码:</string>
    <string name="str_scan_count">扫描次数:</string>
    <string name="str_scan_time">扫描时间:</string>

    <string name="str_front_camera">前摄相机</string>
    <string name="str_illum_light">补光灯</string>
    <string name="str_gamma">图像伽玛</string>
    <string name="enable_all">全部启用</string>
    <string name="disable_all">全部关闭</string>
    <string name="aztec">Aztec</string>
    <string name="bc412">BC412</string>
    <string name="code11">Code 11</string>
    <string name="code128">Code 128</string>
    <string name="code32">Code 32</string>
    <string name="code39">Code 39</string>
    <string name="code49">Code 49</string>
    <string name="code93">Code 93</string>
    <string name="compositeCode">Composite Code</string>
    <string name="codabar">Codabar</string>
    <string name="codablockf">Codablock F</string>
    <string name="data_matrix">Data Matrix</string>
    <string name="ean13">EAN-13</string>
    <string name="ean8">EAN-8</string>
    <string name="grid_matrix">Grid Matrix</string>
    <string name="dot_code">Dot Code</string>
    <string name="gs1_databar">GS1 Databar</string>
    <string name="hong_kong_2_of_5">Hong Kong 2 of 5</string>
    <string name="iata_2_of_5">IATA 2 of 5</string>
    <string name="interleaved_2_of_5">Interleaved 2 of 5</string>
    <string name="matrix_2_of_5">Matrix 2 of 5</string>
    <string name="micropdf417">MicroPDF417</string>
    <string name="microqr">MicroQR</string>
    <string name="msi_plessey">MSI Plessey</string>
    <string name="nec_2_of_5">NEC 2 of 5</string>
    <string name="pdf417">PDF417</string>
    <string name="pharmacode">Pharmacode</string>
    <string name="plessey">Plessey</string>
    <string name="qr_code">QR Code</string>
    <string name="straight_2_of_5">Straight 2 of 5</string>
    <string name="telepen">Telepen</string>
    <string name="trioptic">Trioptic</string>
    <string name="upc_a">UPC-A</string>
    <string name="upc_e">UPC-E</string>
    <string name="australia_post">Australia Post</string>
    <string name="canada_post">Canada Post</string>
    <string name="dutch_post">Dutch Post (KIX)</string>
    <string name="japan_post">Japan Post</string>
    <string name="korea_post">Korea Post</string>
    <string name="royal_mail">Royal Mail</string>
    <string name="usps_intelligent_mail">USPS Intelligent Mail</string>
    <string name="usps_planet">USPS Planet</string>
    <string name="usps_postnet">USPS Postnet</string>
    <string name="upu">UPU ID-tags</string>
    <string name="hanxin_code">Han Xin Code</string>
    <string name="maxi_code">MaxiCode</string>
    <string name="symbologies">条码码制</string>
    <string name="str_sym_settings">编码</string>
    <string name="rq_set_param">设置</string>
    <string name="rq_seek_pic">图片查询</string>
    <string name="rq_point_pic">此操作用于查找扫描记录和图片</string>
    <string name="rq_switch_setting">快捷开关</string>
    <string name="rq_scan_camera">扫码相机</string>
    <string name="rq_forward_camera">人脸相机</string>
    <string name="rq_point_camera">此操作用于是否显示人脸画面</string>
    <string name="rq_scan_decode">相机读码</string>
    <string name="rq_light_switch">灯光</string>
    <string name="rq_point_light">此操作用于是否开启或关闭补光灯</string>
    <string name="rq_kama_pic">亮度增强</string>
    <string name="rq_quick_camera">扫描声音</string>
    <string name="rq_point_quickcamera">此操作用于图片是否上传到云端</string>
    <string name="rq_automatic_login">自动登录</string>
    <string name="rq_point_login">开启后无需手动登录</string>
    <string name="rq_general_settings">常规设置</string>
    <string name="rq_electronic_balance">电子秤</string>
    <string name="rq_point_balance">此操作用于设置电子秤各项参数</string>
    <string name="rq_type_station">驿站类型</string>
    <string name="rq_point_station">此操作用于切换不同驿站操作系统</string>
    <string name="rq_scan_settings">读码设置</string>
    <string name="rq_point_scan">此操作用于设置读码相机各项参数</string>
    <string name="rq_module_selection">模板选择</string>
    <string name="rq_module_one">模式一</string>
    <string name="rq_camera_change">相机显示交换</string>
    <string name="rq_scan_main">扫码位于主页面</string>
    <string name="rq_repeat_time">重复条码超时时间</string>
    <string name="rq_point_repeat">此操作设置XX秒后可以重复扫描</string>
    <string name="rq_zone_min">0秒</string>
    <string name="rq_anther_settings">其他设置</string>
    <string name="rq_network_test">网速测试</string>
    <string name="rq_point_network">此操作用于检测设备网络状态</string>
    <string name="rq_upload_repoat">上传运行报告</string>
    <string name="rq_point_repoat">此操作用于检测设备网络状态</string>
    <string name="rq_examine_upload">检测更新</string>
    <string name="rq_point_examine">此操作用于更新软件</string>
    <string name="rq_user_procotol">用户协议</string>
    <string name="rq_point_procotol">此操作用于查看用户协议</string>
    <string name="rq_agin_login">重新登录库采仪</string>
    <string name="rq_point_aginlogin">此操作用于重新登录库采仪,谨慎操作</string>
    <string name="rq_close_soft">关闭软件</string>
    <string name="rq_point_soft">此操作用于开启或关闭设备</string>
    <string name="rq_agree_procotol">我已同意《软件许可使用》</string>
    <string name="rq_privacy_procotol">《软件隐私保护政策》</string>
    <string name="rq_scan_num">单号</string>
    <string name="rq_weight_show">重量</string>
    <string name="rq_total_num">总数</string>
    <string name="rq_pic_seek">图片信息查询</string>
    <string name="rq_input_num">请输入查询单号</string>
    <string name="rq_seek_button">查询</string>
    <string name="rq_btn_quanselect">全选</string>
    <string name="rq_btn_notselect">全不选</string>
    <string name="rq_btn_delect">删除</string>
</resources>