<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_gray"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48">
            <RelativeLayout
                android:id="@+id/rl_back_photosearch"
                android:layout_width="@dimen/dp_52"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/setting_back_icon" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textselect"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:gravity="center"
                android:text="@string/rq_pic_seek"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />

            <Button
                android:id="@+id/btn_quanselect"
                android:layout_width="70dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="@dimen/dp_5"
                android:layout_toLeftOf="@id/btn_notselect"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/rq_btn_quanselect"
                android:textSize="11sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_notselect"
                android:layout_width="70dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="@dimen/dp_5"
                android:layout_toLeftOf="@id/btn_delect"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/rq_btn_notselect"
                android:textSize="11sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_delect"
                android:layout_width="70dp"
                android:layout_height="@dimen/dp_40"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="@dimen/dp_5"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/rq_btn_delect"
                android:textSize="11sp"
                android:visibility="invisible" />
        </RelativeLayout>
        <View
            android:background="@color/gray"
            android:layout_width="fill_parent"
            android:layout_height="2.0dip"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:alpha="0.3" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_height="@dimen/dp_44"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10">
            <EditText

                android:textSize="@dimen/sp_18"
                android:id="@+id/et_query_barcode"
                android:paddingLeft="@dimen/dp_15"

                android:background="@drawable/textview_frame"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/rq_input_num"
                android:layout_weight="1.0"
                android:inputType="textPhonetic" />
            <Button
                android:textSize="@dimen/sp_18"
                android:gravity="center"
                android:id="@+id/btn_query"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_44"
                android:text="@string/rq_seek_button" />

        </LinearLayout>
        <View
            android:background="@color/gray"
            android:layout_width="fill_parent"
            android:layout_height="2.0dip"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_15"
            android:alpha="0.3" />

        <GridView
            android:id="@+id/gv_photo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_15"
            android:fadeScrollbars="true"
            android:fadingEdgeLength="1000dip"
            android:fastScrollEnabled="true"
            android:stackFromBottom="false" />

        <TextView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/dp_168"
            android:layout_height="@dimen/dp_36"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:background="@drawable/bg_update_cancle_btn"
            android:layout_marginLeft="@dimen/dp_210"
            android:text="返回"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/query_cardView"
        android:layout_width="500dp"
        android:layout_height="280dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            >
            <com.kuaidihelp.posthouse.util.ZoomView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:id="@+id/query_imageView" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/query_close"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="22dp"
            android:layout_marginStart="20dp"
            android:elevation="10px"
            android:src="@drawable/query_close" />
    </RelativeLayout>
</RelativeLayout>
</LinearLayout>